--- a/mod3_lab4.ipynb
+++ b/mod3_lab4.ipynb
@@ -70,7 +70,7 @@
         "from sklearn.neighbors import KNeighborsClassifier\n",
         "from sklearn import datasets"
       ],
-      "execution_count": 1,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -81,7 +81,7 @@
       "metadata": {
         "id": "167jISBahmSu"
       },
-      "execution_count": 2,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -94,9 +94,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IoKfdTQrKGnM",
-        "outputId": "76d0df54-1299-430c-9bd5-0bc54eb1efe6"
+        "outputId": "b2c20dc6-65f2-44fa-8bb7-a215d20790e6"
       },
-      "execution_count": 3,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -106,7 +106,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 31
         }
       ]
     },
@@ -121,9 +121,9 @@
           "height": 478
         },
         "id": "l1Fp6m9jhrpP",
-        "outputId": "9a8fece2-004c-41ff-a128-2e12687ca72a"
+        "outputId": "58050f22-acb3-41e8-9fcf-47f045ca1ada"
       },
-      "execution_count": 4,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -198,7 +198,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-0bc430ed-2865-4526-9680-619878600701\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-b52f4772-ad95-4d04-870b-f35bf4e8c621\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -512,7 +512,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0bc430ed-2865-4526-9680-619878600701')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b52f4772-ad95-4d04-870b-f35bf4e8c621')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -564,12 +564,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-0bc430ed-2865-4526-9680-619878600701 button.colab-df-convert');\n",
+              "        document.querySelector('#df-b52f4772-ad95-4d04-870b-f35bf4e8c621 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-0bc430ed-2865-4526-9680-619878600701');\n",
+              "        const element = document.querySelector('#df-b52f4772-ad95-4d04-870b-f35bf4e8c621');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -589,8 +589,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-ebfe5fb0-3e6f-4011-a602-edea5d71c073\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ebfe5fb0-3e6f-4011-a602-edea5d71c073')\"\n",
+              "<div id=\"df-ece2ffcc-f67f-4eac-92d9-05be2ab4c3c2\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ece2ffcc-f67f-4eac-92d9-05be2ab4c3c2')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -709,7 +709,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-ebfe5fb0-3e6f-4011-a602-edea5d71c073 button');\n",
+              "        document.querySelector('#df-ece2ffcc-f67f-4eac-92d9-05be2ab4c3c2 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -721,7 +721,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 32
         }
       ]
     },
@@ -734,7 +734,7 @@
         "X = cancer.data\n",
         "y = cancer.target"
       ],
-      "execution_count": 5,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -746,7 +746,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.33, random_state = 17)"
       ],
-      "execution_count": 6,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -775,7 +775,7 @@
         "    scores = knn.score(X_test,y_test)\n",
         "    scores_list.append(scores)"
       ],
-      "execution_count": 7,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -786,7 +786,7 @@
           "height": 542
         },
         "id": "UvD57XSyqSVT",
-        "outputId": "3e2d262a-7cfe-4662-ba93-57b6ec9519ee"
+        "outputId": "abd32ddb-2090-4149-d4c8-83ee7d236710"
       },
       "source": [
         "Accuracy = [x*100 for x in scores_list]\n",
@@ -798,7 +798,7 @@
         "plt.ylabel('Accuracy in %')\n",
         "plt.show()"
       ],
-      "execution_count": 8,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "display_data",
@@ -826,9 +826,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "L_PArXY3phVM",
-        "outputId": "2b76c6a7-3bc8-4a14-a201-19c4382771ab"
+        "outputId": "2095dda7-50c8-4cf1-f5c2-e465e046294c"
       },
-      "execution_count": 9,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -898,7 +898,7 @@
       "metadata": {
         "id": "SAp-lfCCiced"
       },
-      "execution_count": 10,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -915,9 +915,9 @@
           "height": 472
         },
         "id": "jcNAfOc6ihrv",
-        "outputId": "fbb0be08-86b4-43f6-fef9-b0e03a94f634"
+        "outputId": "79cd2d5a-9a25-488e-8c80-75d8acfa18de"
       },
-      "execution_count": 11,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "display_data",
@@ -949,7 +949,7 @@
       "metadata": {
         "id": "v-i6n6y3swm4"
       },
-      "execution_count": 12,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -968,7 +968,7 @@
       "metadata": {
         "id": "yUQsEfAjsFaS"
       },
-      "execution_count": 13,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -989,9 +989,9 @@
           "height": 542
         },
         "id": "wy9EH2Yms5e_",
-        "outputId": "e62489d4-1fff-4cd2-ca85-5c4accc68125"
+        "outputId": "bcd2ca3e-d5de-4d5b-e134-49036be111b9"
       },
-      "execution_count": 14,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1019,9 +1019,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sEEUOUOfs7_E",
-        "outputId": "df55bbc3-60fd-4ec0-8108-4340a723e2b2"
+        "outputId": "c47b6a8e-6ba3-4a76-fe3e-9529697335cf"
       },
-      "execution_count": 15,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
@@ -1093,7 +1093,7 @@
       "metadata": {
         "id": "9xjLYb1ZvaqM"
       },
-      "execution_count": 16,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -1118,7 +1118,7 @@
       "metadata": {
         "id": "RB0Te1S8uiT6"
       },
-      "execution_count": 17,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -1129,7 +1129,7 @@
           "height": 542
         },
         "id": "UjpQTP7QpokH",
-        "outputId": "a0fca7de-7bee-469f-e510-f40306a9f7ca"
+        "outputId": "518be754-cd8b-4369-e684-48e35ff020db"
       },
       "source": [
         "Accuracy = [x*100 for x in cv_scores]\n",
@@ -1141,7 +1141,7 @@
         "plt.ylabel('Mean Cross-validation accuracy in %')\n",
         "plt.show()"
       ],
-      "execution_count": 18,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1168,9 +1168,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "U-XBDufnxbuT",
-        "outputId": "87b6eee3-75ce-4ddb-8cf6-2314ea92d676"
+        "outputId": "77d534e7-3864-4a8b-db7e-b0a6e52f515b"
       },
-      "execution_count": 19,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
@@ -1203,7 +1203,7 @@
       "metadata": {
         "id": "ulg8ESJ77bIz"
       },
-      "execution_count": 20,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -1237,7 +1237,7 @@
       "metadata": {
         "id": "GNe4-JTI0tYh"
       },
-      "execution_count": 21,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -1251,7 +1251,7 @@
       "metadata": {
         "id": "dwS4wRtFzUK_"
       },
-      "execution_count": 22,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -1262,7 +1262,7 @@
       "metadata": {
         "id": "rVg1mxfc0HgB"
       },
-      "execution_count": 23,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -1281,7 +1281,7 @@
       "metadata": {
         "id": "yq6yq6FjzmcR"
       },
-      "execution_count": 24,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -1302,9 +1302,9 @@
           "height": 542
         },
         "id": "ID5KNvw5zyOb",
-        "outputId": "6f1fc8c1-edff-4901-ae21-8337ecea4e2c"
+        "outputId": "0015d9eb-eec5-4cee-8496-e031b97431d4"
       },
-      "execution_count": 25,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1332,9 +1332,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8tm1WNW1z0I7",
-        "outputId": "ae611841-04c1-45f9-ec33-2081f7248d7d"
+        "outputId": "7845a4b4-a76d-431e-a72b-5a6f0b89f3ba"
       },
-      "execution_count": 26,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
@@ -1356,7 +1356,7 @@
       "metadata": {
         "id": "8m5kl4pU6oV7"
       },
-      "execution_count": 27,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -1368,7 +1368,7 @@
       "metadata": {
         "id": "NIiLVOEPJFLN"
       },
-      "execution_count": 28,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -1385,13 +1385,19 @@
     },
     {
       "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "-YrC4svSP9lo"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "###Answer1:\n",
-        "Splitting the dataset into training, validation, and test sets offers simplicity and computational efficiency, making it suitable for smaller datasets. The training set is used to train the model, the validation set aids in hyperparameter tuning and model selection, and the test set provides a final unbiased evaluation. However, this approach has drawbacks, such as sensitivity to the initial random split, a potential risk of overfitting to the validation set during iterative model adjustments, and limited data for training, especially if the dataset is small, potentially leading to suboptimal model generalization. Careful consideration of these trade-offs is necessary when choosing between this method and more robust cross-validation techniques.\n",
+        "Splitting the dataset into training, validation, and test sets offers simplicity and computational efficiency compared to cross-validation. The clear separation of training and validation sets allows for model tuning without contaminating the test set. However, the method has drawbacks, such as sensitivity to the initial random split, potentially leading to overfitting on the validation set. The size of each split may also impact model performance, and the process might not be robust when the dataset is limited. Cross-validation, despite its computational cost, provides a more comprehensive assessment of model generalization by averaging performance over multiple folds, which can mitigate the limitations of a single split.\n",
         "\n",
-        "\n",
-        "###Answer2:\n",
-        "K-Fold cross-validation is a non-exhaustive method. In K-Fold cross-validation, the dataset is divided into K subsets, and the model is trained and validated K times, with each fold serving as the validation set exactly once. While this method ensures that each data point is part of the training set K-1 times and the validation set once, it doesn't cover all possible combinations of training and validation sets. Achieving exhaustiveness would require considering all possible partitions, which is often impractical. K-Fold cross-validation strikes a balance between exhaustiveness and computational feasibility, providing robust model evaluation across different subsets of the data.\n",
+        "####Answer2:\n",
+        "K-Fold cross-validation is an exhaustive method because it systematically evaluates a model's performance across multiple subsets (folds) of the dataset. In each iteration, K-Fold CV partitions the data into K folds, trains the model on K-1 folds, and validates it on the remaining fold. This process is repeated K times, ensuring that each fold serves as both a training and validation set. The final performance metric is then averaged over all iterations. This exhaustive approach provides a more robust and representative assessment of the model's generalization performance, capturing variations in the data distribution and minimizing the impact of a single random split, making it a widely used technique in model evaluation.\n",
         "\n",
         "\n",
         "\n",
@@ -1399,7 +1405,7 @@
         "\n"
       ],
       "metadata": {
-        "id": "f8_wh4INNvxX"
+        "id": "w_G9TEyWO_Ui"
       }
     },
     {
